stylesheets/style.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Open+Sans:wght@400;600&display=swap");
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: "Open Sans", sans-serif;
}

header {
  max-width: 1600px;
  margin: auto;
}

nav {
  font-family: "Montserrat", sans-serif;
  text-transform: uppercase;
  font-weight: 600;
  border-bottom: 2px solid #000000;
  border-top: 2px solid #000000;
  text-align: center;
  font-weight: 600;
  font-size: 14px;
  position: fixed;
  width: 100%;
  max-width: 100vw;
  background-color: #fff;
  top: 0;
  left: 0;
}
nav a {
  float: left;
  display: block;
  color: #000000;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
}

.topnav a:not(:first-child) {
  display: none;
}

.topnav a.icon {
  float: right;
  display: block;
}

.topnav.responsive #icon-wrapper {
  padding: 14px 16px;
  position: absolute;
  right: 0;
  top: 0;
}

.topnav.responsive a {
  float: none;
  display: block;
  text-align: left;
}

#icon-wrapper {
  float: right;
}
#icon-wrapper a {
  display: inline;
}

a {
  text-decoration: none;
}

main {
  max-width: 1600px;
  margin: auto;
}

footer {
  background-color: #447019;
  width: 100%;
  min-height: 100px;
}

section {
  margin: 1rem;
}

.item-container, .container-wrapper {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
  margin: 0;
}

article {
  background-color: #F2EFEB;
  margin: 1.5rem 0.5rem;
}

#search {
  width: 100%;
  padding: 0.5rem;
  font-family: "Open Sans", sans-serif;
  margin: 0.5rem 0 1.5rem 0;
}

h1 {
  font-family: "Montserrat", sans-serif;
  text-transform: uppercase;
  font-weight: 600;
  border-top: 2px solid #fff;
  text-align: center;
  padding: 5px 0;
}

h2 {
  font-family: "Montserrat", sans-serif;
  text-transform: uppercase;
  font-weight: 600;
  border-bottom: 2px solid #000000;
  border-top: 2px solid #000000;
  text-align: center;
  padding: 5px 0;
}

h3 {
  padding-top: 0.5rem;
}

aside h3 {
  margin: 1rem;
}

.aside-item {
  display: grid;
  grid-template-columns: 30% 70%;
  margin: 1rem;
}
.aside-item img {
  max-height: 80px;
}
.aside-item .aside-text {
  max-width: 100%;
  padding: 0.4rem;
}
.aside-item .aside-text p {
  font-size: 0.9rem;
}

.page-breadcrumbs {
  font-size: 0.9rem;
  padding: 0.5rem 0;
}

.one-recipe {
  background: transparent;
}

.meal-photo {
  max-width: 100%;
  height: auto;
}

.header-photo {
  width: 100%;
}

.ad {
  max-height: 300px;
}

.ad-photo {
  max-height: 300px;
  width: 100%;
  object-fit: cover;
}

.border-container {
  padding: 1rem;
  border: 2px solid #fff;
  max-width: 400px;
  max-height: 200px;
  margin: 0 1rem;
}

.recipe-details-wrapper {
  max-width: 70%;
  display: flex;
  justify-content: space-between;
  margin: auto;
  padding: 0.2rem 0;
}

.recipe-details-container {
  margin: 1rem 0;
  padding: 1rem;
  background-color: #F2EFEB;
}

.details-container {
  padding: 0.7rem;
}
.details-container p {
  font-size: 0.9rem;
}

.details-title {
  font-family: "Montserrat", sans-serif;
  font-size: 0.75rem;
  font-weight: 500;
  text-transform: uppercase;
  align-self: center;
}

.details-title2 {
  font-size: 0.75rem;
  font-weight: 500;
  text-transform: uppercase;
  align-self: center;
}

.details-text {
  font-weight: 600;
}

.details-box-container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  justify-content: center;
  text-align: center;
  margin: 1.5rem 0 0 0;
  border-top: 2px solid #fff;
}
.details-box-container p {
  border-right: 2px solid #fff;
  padding: 1rem 0;
}
.details-box-container p:last-of-type {
  border: 0px;
}
.details-box-container span {
  display: block;
}

.recipe-details-button {
  width: 100%;
  padding: 1rem 0;
  font-family: "Montserrat", sans-serif;
  background-color: #2A2A2A;
  text-transform: uppercase;
  color: #fff;
}

i {
  height: 15px;
  width: 15px;
}

.slideshow-container {
  position: relative;
  margin: auto;
}

.mySlides {
  display: none;
  height: 40vh;
}

.mySlides:first-of-type {
  background-image: url("../photos/header1.jpeg");
  background-size: cover;
}

.mySlides:nth-of-type(2) {
  background-image: url("../photos/header2.jpg");
  background-size: cover;
}

.mySlides:nth-of-type(3) {
  background-image: url("../photos/header3.jpeg");
  background-size: cover;
}

.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  margin-top: -22px;
  padding: 16px;
  color: white;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  user-select: none;
}

/* Position the "next button" to the right */
.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
  background-color: rgba(0, 0, 0, 0.8);
}

/* Fading animation */
.fade {
  animation-name: fade;
  animation-duration: 1.5s;
}

@keyframes fade {
  from {
    opacity: 0.4;
  }
  to {
    opacity: 1;
  }
}
.one-item {
  display: inline;
}

.checkbox-wrapper {
  padding: 0.5rem 0;
}

#signup-subpage {
  height: 100vh;
  overflow-y: hidden;
}

#signup-wrapper {
  width: 100%;
  height: 100vh;
  background-image: url("../photos/signup.jpg");
  background-size: cover;
  margin: 0;
}
#signup-wrapper h1 {
  color: #fff;
  border: none;
}
#signup-wrapper #form-wrapper {
  background-color: transparent;
  margin: 0 auto;
  position: relative;
  top: 30%;
  max-width: 300px;
}
#signup-wrapper input {
  display: block;
  margin: 0.5rem auto;
  width: 100%;
  padding: 0.5rem;
  border: 2px solid #000000;
  font-family: "Open Sans", sans-serif;
}
#signup-wrapper button {
  width: 100%;
  padding: 1rem 0;
  font-family: "Montserrat", sans-serif;
  text-transform: uppercase;
  background-color: #A5D145;
  font-weight: 600;
}
#signup-wrapper .log-in {
  color: white;
  font-weight: 600;
  text-shadow: 2px 2px 0 #000000, 2px -2px 0 #000000, -2px 2px 0 #000000, -2px -2px 0 #000000, 2px 0px 0 #000000, 0px 2px 0 #000000, -2px 0px 0 #000000, 0px -2px 0 #000000, 0px 0px 10px rgba(0, 0, 0, 0);
}

#settings-headings a {
  display: block;
  color: #000000;
  font-family: "Montserrat", sans-serif;
  text-transform: uppercase;
  font-weight: 600;
  border-top: 2px solid #000000;
  text-align: center;
  padding: 5px 0;
  margin: 0 1rem;
}
#settings-headings a:last-of-type {
  border-bottom: 2px solid #000000;
}

.settings {
  padding: 2rem;
  max-width: 700px;
  margin: auto;
}
.settings input {
  display: block;
  margin: 0.5rem auto;
  width: 100%;
  padding: 0.5rem;
  border: 2px solid #000000;
  font-family: "Open Sans", sans-serif;
}
.settings button {
  width: 100%;
  padding: 1rem 0;
  font-family: "Montserrat", sans-serif;
  text-transform: uppercase;
  background-color: #A5D145;
  font-weight: 600;
}
.settings form {
  max-width: 400px;
  margin: auto;
}

@media screen and (min-width: 720px) {
  #home-page main, .recipe-subpage main {
    display: grid;
    grid-template-columns: 30% 70%;
  }

  .topnav {
    padding: 17px 0;
  }

  .topnav#navigation a {
    float: none;
    display: inline;
  }

  .topnav#navigation a.icon {
    display: none;
  }

  #settings-wrapper {
    display: grid;
    grid-template-columns: 30% 70%;
  }
}
@media screen and (min-width: 1048px) {
  #signup-subpage {
    max-height: 100vh;
  }

  #signup-wrapper {
    display: grid;
    grid-template-columns: 50% 50%;
    background: transparent;
  }
  #signup-wrapper h1 {
    color: #000000;
  }
  #signup-wrapper #image-wrapper {
    background-image: url("../photos/signup.jpg");
    background-size: cover;
    margin: 0;
  }
  #signup-wrapper #form-wrapper {
    max-width: 450px;
    width: 40%;
  }
  #signup-wrapper .log-in {
    text-shadow: none;
    color: black;
  }

  .aside-item img {
    max-height: 180px;
  }
}
@media screen and (min-width: 1320px) {
  aside {
    padding-top: 2rem;
  }

  #settings-subpage footer {
    position: fixed;
    bottom: 0;
  }
}

/*# sourceMappingURL=style.css.map */

